# alexandros/docs/swagger.json
@@ -127,6 +127,13 @@
             "description": "language to use (greek, english, dutch)",
             "name": "lang",
             "in": "query"
+          },
+          {
+            "type": "boolean",
+            "format": "searchWord",
+            "description": "search the word if found in texts. This slows down operations so not recommended in fuzzy or partial modes",
+            "name": "searchWord",
+            "in": "query"
           }
         ],
         "responses": {
@@ -168,242 +175,6 @@
     }
   },
   "definitions": {
-    "Author": {
-      "type": "object",
-      "required": [
-        "author"
-      ],
-      "properties": {
-        "author": {
-          "type": "string",
-          "x-go-name": "Author",
-          "example": "herodotos"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "Authors": {
-      "type": "object",
-      "properties": {
-        "authors": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Author"
-          },
-          "x-go-name": "Authors"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "Book": {
-      "type": "object",
-      "properties": {
-        "book": {
-          "type": "integer",
-          "format": "int64",
-          "x-go-name": "Book",
-          "example": 2
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "Books": {
-      "type": "object",
-      "properties": {
-        "books": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Book"
-          },
-          "x-go-name": "Books"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "Categories": {
-      "type": "object",
-      "properties": {
-        "categories": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Category"
-          },
-          "x-go-name": "Category"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "Category": {
-      "type": "object",
-      "required": [
-        "category"
-      ],
-      "properties": {
-        "category": {
-          "type": "string",
-          "x-go-name": "Category",
-          "example": "frogs"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "CheckAnswerRequest": {
-      "type": "object",
-      "required": [
-        "quizWord",
-        "answerProvided"
-      ],
-      "properties": {
-        "answerProvided": {
-          "type": "string",
-          "x-go-name": "AnswerProvided",
-          "example": "horse"
-        },
-        "quizWord": {
-          "type": "string",
-          "x-go-name": "QuizWord",
-          "example": "ὄνος"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "CheckAnswerResponse": {
-      "type": "object",
-      "required": [
-        "correct",
-        "quizWord"
-      ],
-      "properties": {
-        "correct": {
-          "type": "boolean",
-          "x-go-name": "Correct",
-          "example": false
-        },
-        "possibilities": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Word"
-          },
-          "x-go-name": "Possibilities"
-        },
-        "quizWord": {
-          "type": "string",
-          "x-go-name": "QuizWord",
-          "example": "ὄνος"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "CheckSentenceRequest": {
-      "type": "object",
-      "required": [
-        "sentenceId",
-        "answerSentence",
-        "author"
-      ],
-      "properties": {
-        "answerSentence": {
-          "type": "string",
-          "x-go-name": "ProvidedSentence",
-          "example": "this is an example sentence"
-        },
-        "author": {
-          "type": "string",
-          "x-go-name": "Author",
-          "example": "herodotos"
-        },
-        "sentenceId": {
-          "type": "string",
-          "x-go-name": "SentenceId",
-          "example": "fd4TlogBC__qOhD2dK31"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "CheckSentenceResponse": {
-      "type": "object",
-      "required": [
-        "levenshteinPercentage",
-        "quizSentence",
-        "answerSentence",
-        "splitQuizSentence",
-        "splitAnswerSentence"
-      ],
-      "properties": {
-        "answerSentence": {
-          "type": "string",
-          "x-go-name": "AnswerSentence",
-          "example": "this is an example answer\""
-        },
-        "levenshteinPercentage": {
-          "type": "string",
-          "x-go-name": "LevenshteinPercentage",
-          "example": "9.09"
-        },
-        "matchingWords": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/MatchingWord"
-          },
-          "x-go-name": "MatchingWords"
-        },
-        "nonMatchingWords": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/NonMatchingWord"
-          },
-          "x-go-name": "NonMatchingWords"
-        },
-        "quizSentence": {
-          "type": "string",
-          "x-go-name": "QuizSentence",
-          "example": "Such a step would not be condemned either by the gods who received our oaths,"
-        },
-        "splitAnswerSentence": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "x-go-name": "SplitAnswerSentence",
-          "example": [
-            "this",
-            "example"
-          ]
-        },
-        "splitQuizSentence": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "x-go-name": "SplitQuizSentence",
-          "example": [
-            "Such",
-            "condemned"
-          ]
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "CreateSentenceResponse": {
-      "type": "object",
-      "required": [
-        "sentence",
-        "sentenceId"
-      ],
-      "properties": {
-        "sentence": {
-          "type": "string",
-          "x-go-name": "Sentence",
-          "example": "ὡς δέ οἱ ταῦτα ἔδοξε, καὶ ἐποίεε κατὰ τάχος·"
-        },
-        "sentenceId": {
-          "type": "string",
-          "x-go-name": "SentenceId",
-          "example": "fd4TlogBC__qOhD2dK31"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
     "DatabaseHealth": {
       "type": "object",
       "properties": {
@@ -426,19 +197,6 @@
           "type": "string",
           "x-go-name": "ServerVersion",
           "example": "8.8.0"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "DeclensionTranslationResults": {
-      "type": "object",
-      "properties": {
-        "results": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Result"
-          },
-          "x-go-name": "Results"
         }
       },
       "x-go-package": "github.com/odysseia-greek/agora/plato/models"
@@ -506,89 +264,6 @@
       },
       "x-go-package": "github.com/odysseia-greek/agora/plato/models"
     },
-    "LastChapterResponse": {
-      "type": "object",
-      "required": [
-        "lastChapter"
-      ],
-      "properties": {
-        "lastChapter": {
-          "type": "integer",
-          "format": "int64",
-          "x-go-name": "LastChapter",
-          "example": 119
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "Logos": {
-      "type": "object",
-      "properties": {
-        "logos": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Word"
-          },
-          "x-go-name": "Logos"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "Match": {
-      "type": "object",
-      "required": [
-        "match",
-        "levenshtein",
-        "answerIndex",
-        "percentage"
-      ],
-      "properties": {
-        "answerIndex": {
-          "type": "integer",
-          "format": "int64",
-          "x-go-name": "AnswerIndex",
-          "example": 3
-        },
-        "levenshtein": {
-          "type": "integer",
-          "format": "int64",
-          "x-go-name": "Levenshtein",
-          "example": 4
-        },
-        "match": {
-          "type": "string",
-          "x-go-name": "Match",
-          "example": "superduperword"
-        },
-        "percentage": {
-          "type": "string",
-          "x-go-name": "Percentage",
-          "example": "25.00"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "MatchingWord": {
-      "type": "object",
-      "required": [
-        "word",
-        "sourceIndex"
-      ],
-      "properties": {
-        "sourceIndex": {
-          "type": "integer",
-          "format": "int64",
-          "x-go-name": "SourceIndex",
-          "example": 4
-        },
-        "word": {
-          "type": "string",
-          "x-go-name": "Word",
-          "example": "thiswordisinthetext"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
     "Memory": {
       "type": "object",
       "properties": {
@@ -652,20 +327,6 @@
       },
       "x-go-package": "github.com/odysseia-greek/agora/plato/models"
     },
-    "Method": {
-      "type": "object",
-      "required": [
-        "method"
-      ],
-      "properties": {
-        "method": {
-          "type": "string",
-          "x-go-name": "Method",
-          "example": "aristophanes"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
     "MethodError": {
       "type": "object",
       "required": [
@@ -704,47 +365,6 @@
       },
       "x-go-package": "github.com/odysseia-greek/agora/plato/models"
     },
-    "Methods": {
-      "type": "object",
-      "properties": {
-        "methods": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Method"
-          },
-          "x-go-name": "Method"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "NonMatchingWord": {
-      "type": "object",
-      "required": [
-        "word",
-        "sourceIndex"
-      ],
-      "properties": {
-        "matches": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Match"
-          },
-          "x-go-name": "Matches"
-        },
-        "sourceIndex": {
-          "type": "integer",
-          "format": "int64",
-          "x-go-name": "SourceIndex",
-          "example": 3
-        },
-        "word": {
-          "type": "string",
-          "x-go-name": "Word",
-          "example": "step"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
     "NotFoundError": {
       "type": "object",
       "required": [
@@ -774,70 +394,6 @@
           "type": "string",
           "x-go-name": "Type",
           "example": "query for obscura"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "QuizResponse": {
-      "type": "object",
-      "required": [
-        "question",
-        "answer",
-        "quiz"
-      ],
-      "properties": {
-        "answer": {
-          "type": "string",
-          "x-go-name": "Answer",
-          "example": "donkey"
-        },
-        "question": {
-          "type": "string",
-          "x-go-name": "Question",
-          "example": "ὄνος"
-        },
-        "quiz": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "x-go-name": "QuizQuestions",
-          "example": [
-            "donkey",
-            "anotheranswer"
-          ]
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "Result": {
-      "type": "object",
-      "required": [
-        "word",
-        "rule",
-        "rootWord",
-        "translation"
-      ],
-      "properties": {
-        "rootWord": {
-          "type": "string",
-          "x-go-name": "RootWord",
-          "example": "βαλλω"
-        },
-        "rule": {
-          "type": "string",
-          "x-go-name": "Rule",
-          "example": "3th sing - impf - ind - act"
-        },
-        "translation": {
-          "type": "string",
-          "x-go-name": "Translation",
-          "example": "throw"
-        },
-        "word": {
-          "type": "string",
-          "x-go-name": "Word",
-          "example": "ἔβαλλε"
         }
       },
       "x-go-package": "github.com/odysseia-greek/agora/plato/models"
@@ -928,75 +484,6 @@
       },
       "x-go-package": "github.com/odysseia-greek/agora/plato/models"
     },
-    "SolonCreationRequest": {
-      "type": "object",
-      "required": [
-        "roles",
-        "access",
-        "podName",
-        "username"
-      ],
-      "properties": {
-        "access": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "x-go-name": "Access",
-          "example": "[grammar dictionary]"
-        },
-        "podName": {
-          "type": "string",
-          "x-go-name": "PodName",
-          "example": "dionysios-544c584d7f-6sp6x"
-        },
-        "roles": {
-          "type": "string",
-          "x-go-name": "Role",
-          "example": "api"
-        },
-        "username": {
-          "type": "string",
-          "x-go-name": "Username",
-          "example": "dionysios"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "SolonResponse": {
-      "type": "object",
-      "required": [
-        "userCreated",
-        "secretCreated"
-      ],
-      "properties": {
-        "secretCreated": {
-          "type": "boolean",
-          "x-go-name": "SecretCreated",
-          "example": true
-        },
-        "userCreated": {
-          "type": "boolean",
-          "x-go-name": "UserCreated",
-          "example": true
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "TokenResponse": {
-      "type": "object",
-      "required": [
-        "token"
-      ],
-      "properties": {
-        "token": {
-          "type": "string",
-          "x-go-name": "Token",
-          "example": "s.1283745jdf83r3"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
     "ValidationError": {
       "type": "object",
       "required": [
@@ -1030,45 +517,6 @@
           "type": "string",
           "x-go-name": "Message",
           "example": "cannot be empty"
-        }
-      },
-      "x-go-package": "github.com/odysseia-greek/agora/plato/models"
-    },
-    "Word": {
-      "type": "object",
-      "required": [
-        "method",
-        "category",
-        "greek",
-        "translation",
-        "chapter"
-      ],
-      "properties": {
-        "category": {
-          "type": "string",
-          "x-go-name": "Category",
-          "example": "frogs"
-        },
-        "chapter": {
-          "type": "integer",
-          "format": "int64",
-          "x-go-name": "Chapter",
-          "example": 1
-        },
-        "greek": {
-          "type": "string",
-          "x-go-name": "Greek",
-          "example": "ὄνος"
-        },
-        "method": {
-          "type": "string",
-          "x-go-name": "Method",
-          "example": "aristophanes"
-        },
-        "translation": {
-          "type": "string",
-          "x-go-name": "Translation",
-          "example": "donkey"
         }
       },
       "x-go-package": "github.com/odysseia-greek/agora/plato/models"
